--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-first> </app-first>
+<!-- <app-first> </app-first>
 <app-second> </app-second>
+<app-visiting-card name="Poonam"> </app-visiting-card>
+
+<app-visiting-card [name]='uname'> </app-visiting-card> 
+
+<app-visiting-card [userObj]='userInput'> </app-visiting-card> -->
+
+<app-empdetails> </app-empdetails>
+
