--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -4,7 +4,9 @@
 
 <app-visiting-card [name]='uname'> </app-visiting-card> 
 
-<app-visiting-card [userObj]='userInput'> </app-visiting-card> -->
+<app-visiting-card [userObj]='userInput'> </app-visiting-card> 
+
+<app-defaultpipe></app-defaultpipe> -->
 
 <app-empdetails> </app-empdetails>
 
