--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -10,16 +10,16 @@
 
 <app-empdetails> </app-empdetails> -->
 
-<h1>Credit Card Details Screen</h1>
+<!-- <h1>Credit Card Details Screen</h1>
 <br><br>
 Card Number: <input type="text" [(ngModel)]="cardNumber" />
 <br>
-<img appCclogo [cardNumber]="cardNumber" />
+<img appCclogo [cardNumber]="cardNumber" /> -->
 
 
 <!-- <app-lifecycle></app-lifecycle> 
 <input type="text" [(ngModel)]="userText">
 <app-simplechanges [simpleInput]='userText'></app-simplechanges> -->
 
-<!-- <app-countries></app-countries>  -->
+<app-countries></app-countries>  
 
